- Changed DaemonGradleExecuter to bump up the max perm space when running the daemon - Extracted AbstractDelegatingGradleExecuter out of AbstractGradleExecuter.