@@ -19,7 +19,9 @@ import org.gradle.launcher.daemon.registry.DaemonDir;
 import org.gradle.launcher.daemon.server.DaemonIdleTimeout;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class DaemonGradleExecuter extends ForkingGradleExecuter {
     private static final String DAEMON_REGISTRY_SYS_PROP = "org.gradle.integtest.daemon.registry";
@@ -28,6 +30,14 @@ public class DaemonGradleExecuter extends ForkingGradleExecuter {
     public DaemonGradleExecuter(GradleDistribution distribution) {
         super(distribution.getGradleHomeDir());
         this.distribution = distribution;
+    }
+
+    @Override
+    public Map<String, String> getAllEnvironmentVars() {
+        Map<String, String> vars = new HashMap<String, String>();
+        vars.put("GRADLE_DAEMON_OPTS", "-XX:MaxPermSize=256m");
+        vars.putAll(super.getAllEnvironmentVars());
+        return vars;
     }
 
     @Override
@@ -42,21 +52,4 @@ public class DaemonGradleExecuter extends ForkingGradleExecuter {
         args.addAll(super.getAllArgs());
         return args;
     }
-
-    public GradleHandle createHandle() {
-        return new DaemonGradleHandle(this);
-    }
-
-    protected static class DaemonGradleHandle extends ForkingGradleHandle {
-        public DaemonGradleHandle(ForkingGradleExecuter executer) {
-            super(executer);
-        }
-
-        protected String transformStandardOutput(String output) {
-            output = output.replace(String.format("Note: the Gradle build daemon is an experimental feature.%n"), "");
-            output = output.replace(String.format("As such, you may experience unexpected build failures. You may need to occasionally stop the daemon.%n"), "");
-            return output;
-        }
-    }
-
 }
